--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Early Edge</title>
+    <title>Early Edge - Predictive Analytics for Primary School Dropout Prevention</title>
   </head>
   <body>
     <div id="root"></div>
